// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang 1`] = `
"[
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "index.html",
  "page.html"
]"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang 2`] = `
<!DOCTYPE html>
<html lang="he"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-2"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":".","deepBase":0},"data":{"title":"Documentation","links":[{"title":"Documentation","href":"page.html"}]},"meta":{"metadata":[],"style":[],"script":[]}},"router":{"pathname":"index.html","depth":1},"lang":"he","langs":["he"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with only one rtl lang 3`] = `
<!DOCTYPE html>
<html lang="he"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-2"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":".","deepBase":0},"meta":{"metadata":[],"style":[],"script":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>תיעוד
      </p>/n"},"router":{"pathname":"page.html","depth":1},"lang":"he","langs":["he"]};
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 1`] = `
"[
  "_bundle/search-async-0",
  "_bundle/app-css-1",
  "_bundle/app-js-1",
  "_bundle/search-css-2",
  "_bundle/search-js-0",
  "_bundle/search-js-1",
  "_bundle/search-css-0",
  "_bundle/search-js-2",
  "_bundle/search-css-1",
  "ar/index.html",
  "ar/page.html",
  "en/index.html",
  "en/page.html",
  "index.html"
]"
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 2`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/search-css-2"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":"ar","deepBase":1},"data":{"title":"Documentation","links":[{"title":"Documentation","href":"page.html"}]},"meta":{"metadata":[],"style":[],"script":[]}},"router":{"pathname":"index.html","depth":2},"lang":"ar","langs":["ar","en"]};
    </script>
    <script type="application/javascript"
            src="../_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 3`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/search-css-2"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":"ar","deepBase":1},"meta":{"metadata":[],"style":[],"script":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>توثيق
      </p>/n"},"router":{"pathname":"page.html","depth":2},"lang":"ar","langs":["ar","en"]};
    </script>
    <script type="application/javascript"
            src="../_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 4`] = `
<!DOCTYPE html>
<html lang="en"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":"en","deepBase":1},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":[],"script":[]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"metadata":[],"style":[],"script":[]}},"router":{"pathname":"index.html","depth":2},"lang":"en","langs":["ar","en"]};
    </script>
    <script type="application/javascript"
            src="../_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 5`] = `
<!DOCTYPE html>
<html lang="en"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="yfm"
          content="builder"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/search-css-0"
    >
    <link type="text/css"
          rel="stylesheet"
          href="../_bundle/app-css-1"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"}],"base":"en","deepBase":1},"meta":{"metadata":[{"name":"yfm","content":"builder"}],"style":[],"script":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Lorem
      </p>/n"},"router":{"pathname":"page.html","depth":2},"lang":"en","langs":["ar","en"]};
    </script>
    <script type="application/javascript"
            src="../_bundle/search-js-0"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/app-js-1"
    >
    </script>
    <script type="application/javascript"
            src="../_bundle/search-js-2"
    >
    </script>
  </body>
</html>
`;

exports[`Generate html document with correct lang and dir attributes. Load correct bundles. documentation with rtl and ltr langs 6`] = `
<!DOCTYPE html>
<html lang="ar"
      dir="rtl"
>
  <head>
    <meta charset="utf-8">
    <meta http-equiv="refresh"
          content="0; url=./ar/index.html"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Redirect
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-1"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/search-css-2"
    >
    <script type="text/javascript">
      window.location.replace("./ar/index.html");
    </script>
  </head>
  <body class="g-root g-root_theme_light">
    If you are not redirected automatically, follow this
    <a href="./ar/index.html">
      link to example
    </a>
    .
  </body>
</html>
`;
